add srcset for images and add new imgs

--- a/page.html
+++ b/page.html
@@ -15,7 +15,8 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <img src="./img/mini-logo.png" alt="" class="header__logo">
+                <img src="./img/logo-1x.png" srcset="./img/logo-1x.png 1x, ./img/logo-2x.png 2x,
+                ./img/logo-3x.png 3x" alt="" class="header__logo">
                 <button class="header__btn header__text">Contact sales</button>
             </div>
         </div>
@@ -35,7 +36,8 @@
                     <button class="result__btn result__btntext">Get my exact offer</button>
                 </div>
                 <div class="presentation">
-                    <img src="./img/car.png" alt="" class="presentation__image">
+                    <img src="./img/car-1x.png" srcset="./img/car-1x.png 1x, ./img/car-2x.png 2x,
+                    ./img/car-3x.png 3x" alt="" class="presentation__image">
                 </div>
             </div>
         </div>
