--- a/page.html
+++ b/page.html
@@ -13,33 +13,36 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
-            <div class="header__inner">
-                <img src="./img/logo-1x.png" srcset="./img/logo-1x.png 1x, ./img/logo-2x.png 2x,
-                ./img/logo-3x.png 3x" alt="" class="header__logo">
-                <button class="header__btn header__text">Contact sales</button>
-            </div>
+        <div class="header__inner">
+            <img
+                src="./img/logo-1x.png"
+                srcset="./img/logo-2x.png 2x, ./img/logo-3x.png 3x"
+                alt=""
+                class="header__logo"
+            >
+            <button class="button header__btn">Contact sales</button>
         </div>
     </header>
+
     <section class="content">
-        <div class="container">
-            <div class="content__inner">
-                <div class="result">
-                    <h3 class="result__title">estimated car value</h3>
-                    <h4 class="result__text result__text--bold result__text--mb5">2019 BMW i3</h3>
-                    <h4 class="result__text result__text--mb5">Base 5D Hatchback</h5>
-                    <h5 class="result__text result__text--mb25">10,000 KM</h5>
-                    <h3 class="result__text result__text--bold result__text--green result__text--mb5 result__text--ft29">$333,382 - $363,347</h3>
-                    <p class="result__text result__text--ft12">
-                        This valuation could increase once we verify the specific trim and any optional features of the car.
-                    </p>
-                    <button class="result__btn result__btntext">Get my exact offer</button>
-                </div>
-                <div class="presentation">
-                    <img src="./img/car-1x.png" srcset="./img/car-1x.png 1x, ./img/car-2x.png 2x,
-                    ./img/car-3x.png 3x" alt="" class="presentation__image">
-                </div>
+        <div class="content__inner">
+            <div class="result">
+                <h3 class="result__title">estimated car value</h3>
+                <h4 class="result__text result__text--title">2019 BMW i3</h3>
+                <h4 class="result__text">Base 5D Hatchback</h5>
+                <h5 class="result__text">10,000 KM</h5>
+                <h3 class="result__text result__text--price">$333,382 - $363,347</h3>
+                <p class="result__text result__text--info">
+                    This valuation could increase once we verify the specific trim and any optional features of the car.
+                </p>
+                <button class="button result__btn">Get my exact offer</button>
             </div>
+            <img
+                src="./img/car-1x.png"
+                srcset="./img/car-2x.png 2x, ./img/car-3x.png 3x"
+                alt=""
+                class="presentation"
+            >
         </div>
     </section>
 </body>
