--- a/page.html
+++ b/page.html
@@ -30,7 +30,7 @@
                 <h3 class="result__title">estimated car value</h3>
                 <h4 class="result__text result__text--title">2019 BMW i3</h3>
                 <h4 class="result__text">Base 5D Hatchback</h5>
-                <h5 class="result__text">10,000 KM</h5>
+                <h5 class="result__text result__text--mileage">10,000 KM</h5>
                 <h3 class="result__text result__text--price">$333,382 - $363,347</h3>
                 <p class="result__text result__text--info">
                     This valuation could increase once we verify the specific trim and any optional features of the car.
