--- a/page.html
+++ b/page.html
@@ -20,6 +20,12 @@
                 alt=""
                 class="header__logo"
             >
+            <img
+                src="./img/big_logo-1x.png"
+                srcset="./img/big_logo-2x.png 2x, ./img/big_logo-3x.png 3x"
+                alt=""
+                class="header__logo--1024px"
+            >
             <button class="button header__btn">Contact sales</button>
         </div>
     </header>
@@ -28,7 +34,9 @@
         <div class="content__inner">
             <div class="result">
                 <h3 class="result__title">estimated car value</h3>
-                <h4 class="result__text result__text--title">2019 BMW i3</h3>
+                <h4 class="result__text result__text--title">
+                    2019 BMW i3 Bentley Continental Flying Spur W12
+                </h3>
                 <h4 class="result__text">Base 5D Hatchback</h5>
                 <h5 class="result__text result__text--mileage">10,000 KM</h5>
                 <h3 class="result__text result__text--price">$333,382 - $363,347</h3>
