refactor style.css

--- a/page.html
+++ b/page.html
@@ -18,13 +18,13 @@
                 src="./img/logo-1x.png"
                 srcset="./img/logo-2x.png 2x, ./img/logo-3x.png 3x"
                 alt=""
-                class="header__logo"
+                class="header__logo header__logo--mobile"
             >
             <img
                 src="./img/big_logo-1x.png"
                 srcset="./img/big_logo-2x.png 2x, ./img/big_logo-3x.png 3x"
                 alt=""
-                class="header__logo--1024px"
+                class="header__logo header__logo--1024"
             >
             <button class="button header__btn">Contact sales</button>
         </div>
