update selector bullets

--- a/page.html
+++ b/page.html
@@ -62,30 +62,18 @@
             >
             <h1 class="popup__text popup__text--title">how do you prefer to be contacted?</h1>
             <div class="popup__selector">
-                <input 
-                    type="radio" 
-                    class="popup__input"
-                    id="contact-phone" 
-                    name="contact" 
-                    value="phone"
-                >
-                <label class="popup__text" for="contact-phone">phone</label><br>
-                <input 
-                    type="radio" 
-                    class="popup__input"
-                    id="contact-email" 
-                    name="contact" 
-                    value="email"
-                >
-                <label class="popup__text" for="contact-email">email</label><br>
-                <input  
-                    type="radio" 
-                    class="popup__input"
-                    id="contact-text"
-                    name="contact" 
-                    value="text"
-                >
-                <label  class="popup__text" for="contact-text">text</label>
+                <div class="popup__item">
+                    <div class="popup__circle popup__circle--active"></div>
+                    <span class="popup__text">phone</span>
+                </div>
+                <div class="popup__item">
+                    <div class="popup__circle"></div>
+                    <span class="popup__text">email</span>
+                </div>
+                <div class="popup__item">
+                    <div class="popup__circle"></div>
+                    <span class="popup__text">text</span>
+                </div>
             </div>
             <div class="popup__buttons">
                 <button class="button popup__button popup__button--left">now</button>
