add hover and focus styles for active buttons

--- a/page.html
+++ b/page.html
@@ -26,7 +26,7 @@
                 alt=""
                 class="header__logo header__logo--1024"
             >
-            <button class="button header__btn">Contact sales</button>
+            <button class="button header__btn header__btn--active">Contact sales</button>
         </div>
     </header>
 
@@ -43,7 +43,7 @@
                 <p class="result__text result__text--info">
                     This valuation could increase once we verify the specific trim and any optional features of the car.
                 </p>
-                <button class="button result__btn">Get my exact offer</button>
+                <button class="button result__btn result__btn--active">Get my exact offer</button>
             </div>
             <img
                 src="./img/car-1x.png"
@@ -76,8 +76,8 @@
                 </div>
             </div>
             <div class="popup__buttons">
-                <button class="button popup__button popup__button--left">now</button>
-                <button class="button popup__button popup__button--right">later</button>
+                <button class="button popup__button popup__button--active popup__button--left">now</button>
+                <button class="button popup__button popup__button--active popup__button--right">later</button>
             </div>
         </div>
     </section>
