add listeners for popup selection bullets

--- a/page.html
+++ b/page.html
@@ -63,7 +63,7 @@
             <h1 class="popup__text popup__text--title">how do you prefer to be contacted?</h1>
             <div class="popup__selector">
                 <div class="popup__item">
-                    <div class="popup__circle popup__circle--active"></div>
+                    <div class="popup__circle"></div>
                     <span class="popup__text">phone</span>
                 </div>
                 <div class="popup__item">
