update padding, add button:active, focus, disabled styles

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
                 alt="" 
                 class="form__logo">
             <h1 class="form__title">Log in</h1>
-            <span class="form__notify">Wrong email or password, please try again.</span>
+            <span class="form__error">Wrong email or password, please try again.</span>
             <input type="text" class="form__input form__input--invalid form__input--login">
             <div class="form__input-wrapper">
                 <input type="password" class="form__input form__input--invalid form__input--password">
