update styles for users.html for pixelperfect

--- a/users.html
+++ b/users.html
@@ -280,43 +280,23 @@
             <div class="pagination">
                 <div class="pagination__inner">
                     <img 
-                    src="img/back-icon.svg" 
-                    alt="" 
-                    class="pagination__icon"
+                        src="img/back-icon.svg" 
+                        alt="" 
+                        class="pagination__icon"
                     >
-                    <div class="pagination__button-wrapper pagination__button-wrapper--prev">
-                        <button class="pagination__button pagination__button--prev">Previous page</button>
-                        <img 
-                            src="img/btn-back-icon.svg" 
-                            alt="" 
-                            class="pagination__btn-back-icon"
-                        >
-                    </div>
-                    <div class="pagination__selector-wrapper">
-                        <button class="pagination__selector-btn">10 lines</button>
-                        <img 
-                            src="./img/selector-icon.svg" 
-                            alt="" 
-                            class="pagination__selector-icon"
-                        >
-                    </div>
-                    <div class="pagination__button-wrapper pagination__button-wrapper--next">
-                        <button class="pagination__button pagination__button--next">Next page</button>
-                        <img 
-                            src="img/btn-next-icon.svg" 
-                            alt="" 
-                            class="pagination__btn-next-icon"
-                        >
-                    </div>
+                    <button class="pagination__button pagination__button--prev">Previous page</button>
+                    <button class="pagination__selector-btn">10 lines</button>
+                    <button class="pagination__button pagination__button--next">Next page</button>
                     <img 
                         src="img/next-icon.svg" 
                         alt="" 
-                        class="pagination__icon-next"
+                        class="pagination__icon pagination__icon--next"
                     >
                     <span class="pagination__page-info">
                         Page 
                         <span class="pagination__current-page">289</span> 
-                        of 289</span>
+                        of 289
+                    </span>
                 </div>
             </div>
         </div>
