--- a/users.html
+++ b/users.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="header__wrapper">
+        <div class="header__inner">
             <img 
                 src="./img/user-page-logo-1x.png"
                 srcset="./img/user-page-logo-2x.png 2x, ./img/user-page-logo-3x.png 3x"
@@ -22,18 +22,20 @@
             <div class="header__button">
                 <span class="header__add-stick"></span>
             </div>
-            <span class="header__text">
-                Hello, Jason!
-            </span>
-            <img 
-                src="./img/exit.svg" 
-                alt="" 
-                class="header__exit-btn"
-            >
+            <div class="header__user-info">
+                <span class="header__text">
+                    Hello, Jason!
+                </span>
+                <img 
+                    src="./img/exit.svg" 
+                    alt="" 
+                    class="header__exit-btn"
+                >
+            </div>
         </div>
     </header>
     <section class="content">
-        <div class="content__wrapper">
+        <div class="content__inner">
             <div class="table">
                 <div class="table__header">
                   <h1 class="table__title table__title--user">user</h1>
@@ -276,7 +278,7 @@
                 </div>
             </div>
             <div class="pagination">
-                <div class="pagination__wrapper">
+                <div class="pagination__inner">
                     <img 
                         src="img/back-icon.svg" 
                         alt="" 
