--- a/users.html
+++ b/users.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="header__inner">
+        <div class="header__wrapper">
             <img 
                 src="./img/user-page-logo-1x.png"
                 srcset="./img/user-page-logo-2x.png 2x, ./img/user-page-logo-3x.png 3x"
@@ -22,20 +22,18 @@
             <div class="header__button">
                 <span class="header__add-stick"></span>
             </div>
-            <div class="header__user-info">
-                <span class="header__text">
-                    Hello, Jason!
-                </span>
-                <img 
-                    src="./img/exit.svg" 
-                    alt="" 
-                    class="header__exit-btn"
-                >
-            </div>
+            <span class="header__text">
+                Hello, Jason!
+            </span>
+            <img 
+                src="./img/exit.svg" 
+                alt="" 
+                class="header__exit-btn"
+            >
         </div>
     </header>
     <section class="content">
-        <div class="content__inner">
+        <div class="content__wrapper">
             <div class="table">
                 <div class="table__header">
                   <h1 class="table__title table__title--user">user</h1>
@@ -278,13 +276,12 @@
                 </div>
             </div>
             <div class="pagination">
-                <div class="pagination__inner">
+                <div class="pagination__wrapper">
                     <img 
                         src="img/back-icon.svg" 
                         alt="" 
                         class="pagination__icon"
                     >
-                    
                     <button class="pagination__button pagination__button--prev">Previous page</button>
                     <button class="pagination__selector-btn">10 lines</button>
                     <button class="pagination__button pagination__button--next">Next page</button>
