update src attr in img

--- a/users.html
+++ b/users.html
@@ -263,12 +263,12 @@
                     </span>
                     <div class="table-item__buttons">
                         <img 
-                            src="/img/table-edit-btn.svg" 
+                            src="./img/table-edit-btn.svg" 
                             alt="" 
                             class="table-item__edit-btn"
                         >
                         <img 
-                            src="/img/table-delete-btn.svg" 
+                            src="./img/table-delete-btn.svg" 
                             alt="" 
                             class="table-item__delete-btn"
                         > 
