update src attr

--- a/users.html
+++ b/users.html
@@ -55,12 +55,12 @@
                     </span>
                     <div class="table-item__buttons">
                         <img 
-                            src="/img/table-edit-btn.svg" 
+                            src="./img/table-edit-btn.svg" 
                             alt="" 
                             class="table-item__edit-btn"
                         >
                         <img 
-                            src="/img/table-delete-btn.svg" 
+                            src="./img/table-delete-btn.svg" 
                             alt="" 
                             class="table-item__delete-btn"
                         > 
@@ -81,12 +81,12 @@
                     </span>
                     <div class="table-item__buttons">
                         <img 
-                            src="/img/table-edit-btn.svg" 
+                            src="./img/table-edit-btn.svg" 
                             alt="" 
                             class="table-item__edit-btn"
                         >
                         <img 
-                            src="/img/table-delete-btn.svg" 
+                            src="./img/table-delete-btn.svg" 
                             alt="" 
                             class="table-item__delete-btn"
                         > 
@@ -107,12 +107,12 @@
                     </span>
                     <div class="table-item__buttons">
                         <img 
-                            src="/img/table-edit-btn.svg" 
+                            src="./img/table-edit-btn.svg" 
                             alt="" 
                             class="table-item__edit-btn"
                         >
                         <img 
-                            src="/img/table-delete-btn.svg" 
+                            src="./img/table-delete-btn.svg" 
                             alt="" 
                             class="table-item__delete-btn"
                         > 
@@ -133,12 +133,12 @@
                     </span>
                     <div class="table-item__buttons">
                         <img 
-                            src="/img/table-edit-btn.svg" 
+                            src="./img/table-edit-btn.svg" 
                             alt="" 
                             class="table-item__edit-btn"
                         >
                         <img 
-                            src="/img/table-delete-btn.svg" 
+                            src="./img/table-delete-btn.svg" 
                             alt="" 
                             class="table-item__delete-btn"
                         > 
@@ -159,12 +159,12 @@
                     </span>
                     <div class="table-item__buttons">
                         <img 
-                            src="/img/table-edit-btn.svg" 
+                            src="./img/table-edit-btn.svg" 
                             alt="" 
                             class="table-item__edit-btn"
                         >
                         <img 
-                            src="/img/table-delete-btn.svg" 
+                            src="./img/table-delete-btn.svg" 
                             alt="" 
                             class="table-item__delete-btn"
                         > 
@@ -185,12 +185,12 @@
                     </span>
                     <div class="table-item__buttons">
                         <img 
-                            src="/img/table-edit-btn.svg" 
+                            src="./img/table-edit-btn.svg" 
                             alt="" 
                             class="table-item__edit-btn"
                         >
                         <img 
-                            src="/img/table-delete-btn.svg" 
+                            src="./img/table-delete-btn.svg" 
                             alt="" 
                             class="table-item__delete-btn"
                         > 
@@ -211,12 +211,12 @@
                     </span>
                     <div class="table-item__buttons">
                         <img 
-                            src="/img/table-edit-btn.svg" 
+                            src="./img/table-edit-btn.svg" 
                             alt="" 
                             class="table-item__edit-btn"
                         >
                         <img 
-                            src="/img/table-delete-btn.svg" 
+                            src="./img/table-delete-btn.svg" 
                             alt="" 
                             class="table-item__delete-btn"
                         > 
@@ -237,12 +237,12 @@
                     </span>
                     <div class="table-item__buttons">
                         <img 
-                            src="/img/table-edit-btn.svg" 
+                            src="./img/table-edit-btn.svg" 
                             alt="" 
                             class="table-item__edit-btn"
                         >
                         <img 
-                            src="/img/table-delete-btn.svg" 
+                            src="./img/table-delete-btn.svg" 
                             alt="" 
                             class="table-item__delete-btn"
                         > 
