add dynamic data adding from objects to html

--- a/users.html
+++ b/users.html
@@ -40,240 +40,6 @@
                   <h1 class="table__title table__title--email">email</h1>
                   <h1 class="table__title table__title--action">actions</h1>
                 </div>
-                <div class="table-item">
-                    <div class="table-item__user-info">
-                        <img 
-                            src="./img/user-avatar-1x.png"
-                            srcset="./img/user-avatar-2x.png 2x, ./img/user-avatar-3x.png 3x"
-                            alt="" 
-                            class="table-item__user-avatar"
-                        >
-                        <span class="table-item__text table-item__text--fullname">Vincent Lynch</span>
-                    </div>
-                    <span class="table-item__text table-item__text--email">
-                        vincent.lynch@storytelling-software.com
-                    </span>
-                    <div class="table-item__buttons">
-                        <img 
-                            src="./img/table-edit-btn.svg" 
-                            alt="" 
-                            class="table-item__edit-btn"
-                        >
-                        <img 
-                            src="./img/table-delete-btn.svg" 
-                            alt="" 
-                            class="table-item__delete-btn"
-                        > 
-                    </div>
-                </div>
-                <div class="table-item">
-                    <div class="table-item__user-info">
-                        <img 
-                            src="./img/user-avatar-1x.png"
-                            srcset="./img/user-avatar-2x.png 2x, ./img/user-avatar-3x.png 3x"
-                            alt="" 
-                            class="table-item__user-avatar"
-                        >
-                        <span class="table-item__text table-item__text--fullname">Victoria Fox</span>
-                    </div>
-                    <span class="table-item__text table-item__text--email">
-                        victoria.fox@mail.com
-                    </span>
-                    <div class="table-item__buttons">
-                        <img 
-                            src="./img/table-edit-btn.svg" 
-                            alt="" 
-                            class="table-item__edit-btn"
-                        >
-                        <img 
-                            src="./img/table-delete-btn.svg" 
-                            alt="" 
-                            class="table-item__delete-btn"
-                        > 
-                    </div>
-                </div>
-                <div class="table-item">
-                    <div class="table-item__user-info">
-                        <img 
-                            src="./img/user-avatar-1x.png"
-                            srcset="./img/user-avatar-2x.png 2x, ./img/user-avatar-3x.png 3x"
-                            alt="" 
-                            class="table-item__user-avatar"
-                        >
-                        <span class="table-item__text table-item__text--fullname">Victoria Fox</span>
-                    </div>
-                    <span class="table-item__text table-item__text--email">
-                        vincent.lynch@storytelling-software.com
-                    </span>
-                    <div class="table-item__buttons">
-                        <img 
-                            src="./img/table-edit-btn.svg" 
-                            alt="" 
-                            class="table-item__edit-btn"
-                        >
-                        <img 
-                            src="./img/table-delete-btn.svg" 
-                            alt="" 
-                            class="table-item__delete-btn"
-                        > 
-                    </div>
-                </div>
-                <div class="table-item">
-                    <div class="table-item__user-info">
-                        <img 
-                            src="./img/user-avatar-1x.png"
-                            srcset="./img/user-avatar-2x.png 2x, ./img/user-avatar-3x.png 3x"
-                            alt="" 
-                            class="table-item__user-avatar"
-                        >
-                        <span class="table-item__text table-item__text--fullname">Vincent Lynch</span>
-                    </div>
-                    <span class="table-item__text table-item__text--email">
-                        vincent.lynch@storytelling-software.com
-                    </span>
-                    <div class="table-item__buttons">
-                        <img 
-                            src="./img/table-edit-btn.svg" 
-                            alt="" 
-                            class="table-item__edit-btn"
-                        >
-                        <img 
-                            src="./img/table-delete-btn.svg" 
-                            alt="" 
-                            class="table-item__delete-btn"
-                        > 
-                    </div>
-                </div>
-                <div class="table-item">
-                    <div class="table-item__user-info">
-                        <img 
-                            src="./img/user-avatar-1x.png"
-                            srcset="./img/user-avatar-2x.png 2x, ./img/user-avatar-3x.png 3x"
-                            alt="" 
-                            class="table-item__user-avatar"
-                        >
-                        <span class="table-item__text table-item__text--fullname">Vincent Lynch</span>
-                    </div>
-                    <span class="table-item__text table-item__text--email">
-                        vincent.lynch@storytelling-software.com
-                    </span>
-                    <div class="table-item__buttons">
-                        <img 
-                            src="./img/table-edit-btn.svg" 
-                            alt="" 
-                            class="table-item__edit-btn"
-                        >
-                        <img 
-                            src="./img/table-delete-btn.svg" 
-                            alt="" 
-                            class="table-item__delete-btn"
-                        > 
-                    </div>
-                </div>
-                <div class="table-item">
-                    <div class="table-item__user-info">
-                        <img 
-                            src="./img/user-avatar-1x.png"
-                            srcset="./img/user-avatar-2x.png 2x, ./img/user-avatar-3x.png 3x"
-                            alt="" 
-                            class="table-item__user-avatar"
-                        >
-                        <span class="table-item__text table-item__text--fullname">Vincent Lynch</span>
-                    </div>
-                    <span class="table-item__text table-item__text--email">
-                        vincent.lynch@storytelling-software.com
-                    </span>
-                    <div class="table-item__buttons">
-                        <img 
-                            src="./img/table-edit-btn.svg" 
-                            alt="" 
-                            class="table-item__edit-btn"
-                        >
-                        <img 
-                            src="./img/table-delete-btn.svg" 
-                            alt="" 
-                            class="table-item__delete-btn"
-                        > 
-                    </div>
-                </div>
-                <div class="table-item">
-                    <div class="table-item__user-info">
-                        <img 
-                            src="./img/user-avatar-1x.png"
-                            srcset="./img/user-avatar-2x.png 2x, ./img/user-avatar-3x.png 3x"
-                            alt="" 
-                            class="table-item__user-avatar"
-                        >
-                        <span class="table-item__text table-item__text--fullname">Vincent Lynch</span>
-                    </div>
-                    <span class="table-item__text table-item__text--email">
-                        vincent.lynch@storytelling-software.com
-                    </span>
-                    <div class="table-item__buttons">
-                        <img 
-                            src="./img/table-edit-btn.svg" 
-                            alt="" 
-                            class="table-item__edit-btn"
-                        >
-                        <img 
-                            src="./img/table-delete-btn.svg" 
-                            alt="" 
-                            class="table-item__delete-btn"
-                        > 
-                    </div>
-                </div>
-                <div class="table-item">
-                    <div class="table-item__user-info">
-                        <img 
-                            src="./img/user-avatar-1x.png"
-                            srcset="./img/user-avatar-2x.png 2x, ./img/user-avatar-3x.png 3x"
-                            alt="" 
-                            class="table-item__user-avatar"
-                        >
-                        <span class="table-item__text table-item__text--fullname">Vincent Lynch</span>
-                    </div>
-                    <span class="table-item__text table-item__text--email">
-                        vincent.lynch@storytelling-software.com
-                    </span>
-                    <div class="table-item__buttons">
-                        <img 
-                            src="./img/table-edit-btn.svg" 
-                            alt="" 
-                            class="table-item__edit-btn"
-                        >
-                        <img 
-                            src="./img/table-delete-btn.svg" 
-                            alt="" 
-                            class="table-item__delete-btn"
-                        > 
-                    </div>
-                </div>
-                <div class="table-item">
-                    <div class="table-item__user-info">
-                        <img 
-                            src="./img/user-avatar-1x.png"
-                            srcset="./img/user-avatar-2x.png 2x, ./img/user-avatar-3x.png 3x"
-                            alt="" 
-                            class="table-item__user-avatar"
-                        >
-                        <span class="table-item__text table-item__text--fullname">Vincent Lynch</span>
-                    </div>
-                    <span class="table-item__text table-item__text--email">
-                        vincent.lynch@storytelling-software.com
-                    </span>
-                    <div class="table-item__buttons">
-                        <img 
-                            src="./img/table-edit-btn.svg" 
-                            alt="" 
-                            class="table-item__edit-btn"
-                        >
-                        <img 
-                            src="./img/table-delete-btn.svg" 
-                            alt="" 
-                            class="table-item__delete-btn"
-                        > 
-                    </div>
-                </div>
             </div>
             <div class="pagination">
                 <div class="pagination__wrapper">
@@ -320,6 +86,7 @@
             </div>
         </div>
     </section>
-    <script src="./js/users.js"></script>
+    <script src="./js/users_page.js"></script>
+    <script type="module" src="./js/users/usersService.js"></script>
 </body>
 </html>
