rename popup__inner for popup__wrapper in users.html and users.css

--- a/users.html
+++ b/users.html
@@ -66,7 +66,7 @@
         </div>
     </section>
     <section class="popup">
-        <div class="popup__inner">
+        <div class="popup__wrapper">
             <h1 class="popup__header">Add a new User <span class="popup__header-span">(fill in all fields)</span></h1>
             <div class="popup__form">
                 <input type="text" class="popup__input popup__input--first-name" placeholder="First name">
